Fix jumpy and weirdly positioned title

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,7 @@
-.header {
-  padding: 16px 0px;
-}
-
 .header__title {
   font-family: 'Bungee', 'Impact' !important;
   color: var(--accent-color);
-  height: 36px;
   margin: 0px;
+  height: 100px;
+  line-height: 100px;
 }
